--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,10 @@
 
 # Ignore application configuration
 /config/application.yml
+
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
 /public/uploads/tmp
 /public/uploads/
