--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@
 
 # Ignore application configuration
 /config/application.yml
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
+/public/uploads/tmp
