--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,6 +1,8 @@
 fullname_length_maximum: 140
+name_length_maximum: 150
 email_length_minimum: 10
 email_length_maximum: 250
+content_text_max_length: 500
 password_length_minimum: 6
 minimagick_width: 300
 minimagick_height: 300
@@ -8,4 +10,7 @@ start_year: 1900
 minimagick_width_thumb: 100
 minimagick_height_thumb: 100
 per_page_default: 10
-avatar_default: "user.png"
+avatar_default: "picture.png"
+duration_minimun: 1
+duration_maximum: 100
+images_types: ["jpg", "jpeg", "gif", "png"]
